--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Provides position_beeswarm() for ggplot2
 Version: 0.2.0
 Date: 2015-01-13
-Authors: Erik Clarke, Scott Sherrill-Mix
+Author: Erik Clarke, Scott Sherrill-Mix
 Maintainer: Erik Clarke <ecl@mail.med.upenn.edu>
 Description: Allows the creation of beeswarm-style plots with ggplot2
 License: GPL-2
