--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,7 @@ Maintainer: Erik Clarke <ecl@mail.med.upenn.edu>
 Description: This package allows the creation of beeswarm-style plots using quasirandom noise with ggplot2 or default R plotting.
 License: GPL-2
 Depends:
-    R (>= 3.0.0), proto, ggplot2
+    R (>= 3.0.0)
+Imports:
+    proto, ggplot2
+
