--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(digits2number)
 export(number2digits)
 export(offset_x)
+export(position_beeswarm)
 export(position_quasirandom)
 export(vanDerCorput)
+import(beeswarm)
 import(ggplot2)
 import(proto)
