--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
-Package: violinpoint
+Package: ggbeeswarm
 Type: Package
 Title: Plots multiple one-dimensional data in a plot combining the features of violin and scatter points
-Version: 0.2.0
+Version: 0.3.0
 Date: 2015-01-13
 Author: Erik Clarke, Scott Sherrill-Mix
 Maintainer: Erik Clarke <ecl@mail.med.upenn.edu>
 Description: This package allows the creation of beeswarm-style plots using quasirandom noise with ggplot2 or default R plotting.
-License: GPL-2
+License: GPL (>=2)
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.0.0),
 Imports:
-    proto, ggplot2, beeswarm, violinPointR
+    proto, ggplot2, beeswarm, violinpoint
 
