--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.3.0
 Date: 2015-01-13
 Author: Erik Clarke, Scott Sherrill-Mix
 Maintainer: Erik Clarke <ecl@mail.med.upenn.edu>
-Description: This package allows the creation of beeswarm-style plots using quasirandom noise with ggplot2 or default R plotting.
+Description: Provides methods for beeswarm (a.k.a. violin point) plots in ggplot2.
 License: GPL (>=2)
 Depends:
     R (>= 3.0.0),
