--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ License: GPL (>=2)
 Depends:
     R (>= 3.0.0),
 Imports:
-    proto, ggplot2, beeswarm, violinpoint
+    proto, ggplot2, beeswarm, vipor
 
