Fix dependencies. Bump version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: ggbeeswarm
 Type: Package
 Title: Plots multiple one-dimensional data in a plot combining the features of violin and scatter points
-Version: 0.3.0
+Version: 0.4.0
 Date: 2015-01-13
 Author: Erik Clarke, Scott Sherrill-Mix
 Maintainer: Erik Clarke <ecl@mail.med.upenn.edu>
 Description: Provides methods for beeswarm (a.k.a. violin point) plots in ggplot2.
 License: GPL (>=2)
 Depends:
-    R (>= 3.0.0),
+    R (>= 3.0.0), ggplot2 (>= 2.0)
 Imports:
-    proto, ggplot2, beeswarm, vipor
+    beeswarm, vipor
 
