--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(geom_beeswarm)
 export(geom_quasirandom)
 export(position_beeswarm)
 export(position_quasirandom)
-import(beeswarm)
 import(ggplot2)
-import(proto)
-import(vipor)
+importFrom(beeswarm,swarmx)
+importFrom(vipor,offsetX)
