--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggbeeswarm
 Type: Package
-Title: Create beeswarm (a.k.a violin point) plots in ggplot2.
+Title: Create beeswarm (a.k.a violin point) plots in ggplot2
 Version: 0.5.0
 Date: 2015-01-13
 Authors@R: as.person(c(
