--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggbeeswarm
 Type: Package
-Title: Create Categorical Scatter (Violin Point) Plots in ggplot2
+Title: Categorical Scatter (Violin Point) Plots
 Version: 0.5.0
 Date: 2015-02-20
 Authors@R: c(
@@ -8,7 +8,7 @@ Authors@R: c(
     person(given="Scott", family="Sherrill-Mix", role=c("aut"), email="sherrillmix@gmail.com"))
 Description: Provides two methods of plotting categorical scatter plots such
     that the arrangement of points within a category reflects the density of
-    data at that region, and avoids overplotting.
+    data at that region, and avoids over-plotting.
 License: GPL (>=2)
 Depends:
     R (>= 3.0.0),
