--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(GeomBeeswarm)
 export(geom_beeswarm)
 export(geom_quasirandom)
 export(makeContent.beeswarm)
-export(position_beeswarm)
+export(offset_beeswarm)
 export(position_quasirandom)
 import(ggplot2)
 importFrom(beeswarm,swarmx)
