--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ export(offset_beeswarm)
 export(position_quasirandom)
 import(ggplot2)
 importFrom(beeswarm,swarmx)
-importFrom(vipor,offsetX)
+importFrom(vipor,offsetSingleGroup)
