--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ BugReports: https://github.com/eclarke/ggbeeswarm/issues
 Encoding: UTF-8
 License: GPL (>=2)
 Depends:
-    R (>= 3.2),
+    R (>= 3.5.0),
     ggplot2 (>= 3.3.0)
 Imports:
     beeswarm,
+    lifecycle,
     vipor
 Suggests:
     gridExtra
 RoxygenNote: 7.2.2
+Roxygen: list(markdown = TRUE)
