--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -64,6 +64,9 @@ jobs:
         with:
           token: ${{ secrets.RHUB_TOKEN }}
           job-config: ${{ matrix.config.job-config }}
+          env:
+            BUILD_ARGS: --no-build-vignettes
+            CHECK_ARGS: --ignore-vignettes
 
   other-platforms:
     needs: setup
@@ -93,3 +96,6 @@ jobs:
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+          env:
+            BUILD_ARGS: --no-build-vignettes
+            CHECK_ARGS: --ignore-vignettes
